--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-file-reader": "^1.1.4",
     "react-scripts": "1.1.4"
   },
   "scripts": {
